# rust-backend

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.alpine  README-ES.md  README.md  containerapp.yaml  upload.ps1
packs/spl-application/: Cargo.toml
packs/spl-application/src/: lib.rs
packs/spl-application/src/dtos/: company.rs  dashboard.rs  image.rs  plot.rs
packs/spl-application/src/dtos/diagnostics/: label.rs  mark_type.rs  mod.rs  prediction.rs
packs/spl-application/src/dtos/feedback/: feedback.rs  mod.rs  status.rs
packs/spl-application/src/dtos/recommendation/: category.rs  mod.rs  recommendation.rs
packs/spl-application/src/dtos/user/: user.rs
packs/spl-application/src/mappers/: company.rs  mod.rs  plot.rs
packs/spl-application/src/mappers/diagnostics/: label.rs  mark_type.rs  mod.rs  prediction.rs
packs/spl-application/src/mappers/feedback/: feedback.rs  status.rs
packs/spl-application/src/mappers/recommendation/: category.rs  mod.rs  recommendation.rs
packs/spl-application/src/mappers/user/: user.rs
packs/spl-application/src/services/: access_control.rs  auth.rs  company.rs  dashboard.rs  image.rs  mod.rs  plot.rs
packs/spl-application/src/services/diagnostics/: label.rs  mark_type.rs  mod.rs  prediction.rs
packs/spl-application/src/services/feedback/: feedback.rs  mod.rs  status.rs
packs/spl-application/src/services/recommendation/: category.rs  mod.rs  recommendation.rs
packs/spl-application/src/services/user/: mod.rs  role.rs  user.rs
packs/spl-application/tests/: auth_test.rs  image_test.rs  user_test.rs
packs/spl-domain/: Cargo.toml
packs/spl-infra/: Cargo.toml  build.rs
packs/spl-infra/src/: lib.rs
packs/spl-infra/src/adapters/: mod.rs
packs/spl-infra/src/adapters/auth/: jwt.rs  password.rs
packs/spl-infra/src/adapters/integrations/: http_client.rs  mod.rs
packs/spl-infra/src/adapters/integrations/model_serving/: mock.rs  mod.rs  tensorflow.rs
packs/spl-infra/src/adapters/integrations/model_serving/tensorflow/: common.rs  grpc.rs  http.rs  mod.rs
packs/spl-infra/src/adapters/integrations/storage/: azure.rs  local.rs  mock.rs  mod.rs
packs/spl-infra/src/adapters/persistence/: mod.rs
packs/spl-infra/src/adapters/persistence/entities/: company.rs  image.rs  plot.rs
packs/spl-infra/src/adapters/persistence/entities/diagnostics/: label.rs  mark_type.rs  mod.rs  prediction.rs  prediction_mark.rs
packs/spl-infra/src/adapters/persistence/entities/feedback/: feedback.rs  mod.rs  status.rs
packs/spl-infra/src/adapters/persistence/entities/recommendation/: category.rs  mod.rs  recommendation.rs
packs/spl-infra/src/adapters/persistence/entities/user/: mod.rs  role.rs  user.rs
packs/spl-infra/src/adapters/persistence/mappers/: company.rs  dashboard.rs  image.rs  mod.rs  plot.rs
packs/spl-infra/src/adapters/persistence/mappers/diagnostics/: label.rs  mark_type.rs  prediction.rs  prediction_mark.rs
packs/spl-infra/src/adapters/persistence/mappers/feedback/: feedback.rs  mod.rs  status.rs
packs/spl-infra/src/adapters/persistence/mappers/recommendation/: category.rs  mod.rs  recommendation.rs
packs/spl-infra/src/adapters/persistence/mappers/user/: role.rs  user.rs
packs/spl-infra/src/adapters/persistence/repositories/: company.rs  dashboard.rs  image.rs  mod.rs  plot.rs
packs/spl-infra/src/adapters/persistence/repositories/diagnostics/: dashboard.rs  label.rs  mark_type.rs  mod.rs  prediction.rs  prediction_mark.rs
packs/spl-infra/src/adapters/persistence/repositories/feedback/: feedback.rs  status.rs
packs/spl-infra/src/adapters/persistence/repositories/recommendation/: category.rs  mod.rs  recommendation.rs
packs/spl-infra/src/adapters/persistence/repositories/user/: role.rs  user.rs
packs/spl-infra/src/adapters/web/: mod.rs  state.rs
packs/spl-infra/src/adapters/web/controllers/: auth.rs  companies.rs  dashboard.rs  mod.rs  plots.rs
packs/spl-infra/src/adapters/web/controllers/diagnostics/: labels.rs  mark_types.rs  mod.rs  prediction.rs
packs/spl-infra/src/adapters/web/controllers/feedback/: feedback.rs  status.rs
packs/spl-infra/src/adapters/web/controllers/recommendation/: category.rs  mod.rs  recommendation.rs
packs/spl-infra/src/adapters/web/mappers/: company.rs  dashboard.rs  image.rs  plot.rs
packs/spl-infra/src/adapters/web/middleware/: auth.rs  permissions.rs
packs/spl-infra/src/adapters/web/models/: auth.rs  common.rs  company.rs  dashboard.rs  health.rs  image.rs  mod.rs  plot.rs  user.rs
packs/spl-infra/tests/: jwt_exp_test.rs  permissions_test.rs  web_integration.rs
packs/spl-infra/tests/common/: config.rs  mocks.rs  mod.rs
packs/spl-infra/tests/web/: companies.rs  diagnostics.rs  health.rs  login.rs  plots.rs  recommendation.rs  register.rs  user.rs
packs/spl-migration/: Cargo.toml
packs/spl-migration/seeds/: recommendations.json
packs/spl-migration/src/: lib.rs  m20260130_000001_create_role_table.rs  m20260130_000002_create_user_table.rs  m20260130_000003_create_company_table.rs  m20260205_000004_create_recommendation_tables.rs  m20260206_000005_create_diagnostics_tables.rs  m20260206_000006_create_feedback_tables.rs  m20260207_000007_create_plots_table.rs  m20260207_000008_create_images_table.rs  m20260209_000009_seed_recommendations.rs
packs/spl-server/: Cargo.toml
packs/spl-server/src/: main.rs
packs/spl-server/src/setup/: database.rs  integrations.rs  mod.rs  rate_limiting.rs  redis.rs  repositories.rs  seed.rs  services.rs
packs/spl-shared/: Cargo.toml
packs/spl-shared/src/: config.rs  error.rs  lib.rs  telemetry.rs  validation.rs
packs/spl-shared/src/adapters/: mod.rs  rate_limiting.rs  redis.rs
packs/spl-shared/src/adapters/persistence/repository/: crud.rs
packs/spl-shared/src/helpers/: helpers.rs  mod.rs
packs/spl-shared/src/helpers/rules/: maps_set.rs  maps_to.rs  mirror.rs  mod.rs
packs/spl-shared/src/http/: mod.rs  responses.rs
packs/spl-shared/src/http/extractor/: mod.rs  multipart.rs  validate_json.rs
packs/spl-shared/src/http/middleware/: mod.rs  rate_limit.rs
packs/spl-shared/src/traits/: mod.rs
(+74 files in other folders)
