[workspace]
resolver = "2"
members = [
    "packs/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SmartPotatoLeaf Team"]

[workspace.dependencies]
# Intra-workspace dependencies
spl-domain = { path = "packs/spl-domain" }
spl-application = { path = "packs/spl-application" }
spl-infra = { path = "packs/spl-infra" }
spl-shared = { path = "packs/spl-shared" }
spl-migration = { path = "packs/spl-migration" }

# Common dependencies
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
validator = { version = "0.19", features = ["derive"] }

# Database & Web
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.0"
axum = {version = "0.7", features = ["multipart"]}
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
regex = "1.10"

# Documentation
utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Testing
mockall = "0.12"
tower = { version = "0.4", features = ["util"] }
hamcrest = "0.1"
