[workspace]
resolver = "2"
members = [
    "packs/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SmartPotatoLeaf Team"]

[workspace.dependencies]
# Intra-workspace dependencies
spl-domain = { path = "packs/spl-domain" }
spl-application = { path = "packs/spl-application" }
spl-infra = { path = "packs/spl-infra" }
spl-shared = { path = "packs/spl-shared" }
spl-migration = { path = "packs/spl-migration" }

# Common dependencies
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.15.19"
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
validator = { version = "0.20.0", features = ["derive"] }

# Database & Web
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.0"
axum = {version = "0.8.8", features = ["multipart"]}
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
argon2 = "0.5"
rand = "0.10.0"
regex = "1.10"

# Rate Limiting
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager", "cluster"] }
bb8 = "0.9.1"
bb8-redis = "0.26.0"

# Documentation
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Testing
mockall = "0.12"
tower = { version = "0.4", features = ["util"] }
hamcrest = "0.1"

[profile.release]
opt-level = 3           # Maximum optimization for speed
lto = "thin"            # Thin LTO (faster than "fat", good balance)
codegen-units = 16      # Default for better compile time (reduce for smaller binary)
strip = true            # Strip symbols for smaller binary
panic = "abort"         # Abort on panic for smaller binary

# Alternative profile for smallest possible binary (slower build)
# Use with: cargo build --profile release-small
[profile.release-small]
inherits = "release"
opt-level = "z"         # Optimize for size
lto = "fat"             # Fat LTO for maximum optimization
codegen-units = 1       # Single codegen unit for better optimization

