[package]
name = "spl-application"
version.workspace = true
edition.workspace = true

[dependencies]
spl-domain.workspace = true
spl-shared.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
bytes = "1.11.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tokio.workspace = true
mockall.workspace = true
