[package]
name = "spl-infra"
version.workspace = true
edition.workspace = true

[dependencies]
spl-domain.workspace = true
spl-application.workspace = true
spl-shared.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
anyhow.workspace = true
async-trait.workspace = true
uuid.workspace = true
serde_json.workspace = true
chrono.workspace = true
validator.workspace = true

# Phase 2 Dependencies
sea-orm.workspace = true
axum.workspace = true
tower-http.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
regex.workspace = true
utoipa = { workspace = true, features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

# Integration Dependencies
reqwest = { version = "0.11", features = ["json"] }
bytes = "1.5"
azure_storage = "0.20"
azure_storage_blobs = "0.20"
azure_core = "0.20"
futures = "0.3"
image = "0.25"

[dev-dependencies]
tower.workspace = true
mockall.workspace = true
hamcrest.workspace = true
