[package]
name = "spl-migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "spl_migration"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
sea-orm-migration = { version = "1.0", features = ["with-uuid"] }
uuid = { workspace = true, features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
