[package]
name = "spl-server"
version.workspace = true
edition.workspace = true

[dependencies]
spl-infra.workspace = true
spl-application.workspace = true
spl-shared.workspace = true
spl-domain.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy = "0.15"
sea-orm.workspace = true
sea-orm-migration.workspace = true
axum.workspace = true
spl-migration.workspace = true
utoipa = { workspace = true, features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
uuid = { workspace = true, features = ["v4"] }
sea-query = { version = "0.30", features = ["uuid"] }
chrono = { workspace = true }

