[package]
name = "spl-shared"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
config.workspace = true
serde.workspace = true
axum.workspace = true
async-trait.workspace = true
serde_json.workspace = true
validator.workspace = true
regex.workspace = true
sea-orm.workspace = true
utoipa.workspace = true